--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-twitter.consumerKey=<<CHANGE ME>>
-twitter.consumerSecret=<<CHANGE ME>>
-twitter.accessToken=<<CHANGE ME>>
-twitter.accessTokenSecret=<<CHANGE ME>>
+twitter.consumerKey= pYGaMnp0f5HroAUdxNyZhhZLT
+twitter.consumerSecret=LSjwvq2AJnec2OKLylIM0v5VS4ql4B4yDONnz3K0Er0VETqrax
+twitter.accessToken= 284462392-qT1hXHOomD6K1SnjqWYkMwDdFX2zotTKVSZjHgnx
+twitter.accessTokenSecret=scAPiEIsZsLzJO7xHmeVBexq6pCX0qEMEDdqkGnuCSx5M
 
